[package]
name = "mikumikutower"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
sdl3 = { version = "0", features = ["image", "mixer", "build-from-source"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"HtmlCanvasElement",
	"CanvasRenderingContext2d",
	"console",
]}
console_error_panic_hook = "0.1"
